Changes from jTDS 0.8
=========================

06/23/2004 - Brian Heineman
 o Applied patch [950028] Jtds enhancement - TDS 5.0 (thanks to code provided
   by Mike Hutchinson this patch corrects a number of bugs and adds initial
   support for TDS 8.0 as well)
 o Corrected bug with Savepoint id assignment.
 o Improved performance of data conversions by reducing memory allocations.
 o Corrected bug [974036] Bug in 0.8rc1 DatabaseMetaData method getTableTypes()

===============================================================================
06/22/2004 - jTDS 0.8 released
===============================================================================

Changes from jTDS 0.8-rc1
=========================

06/08/2004 - Brian Heineman
 o Corrected bug [965018] translateDate is not recognized function name.

05/30/2004 - Brian Heineman
 o Corrected bug where "Cp" or "MS" was being appended to strings that already
   started with a different case of the same sequence of characters.
 o Corrected bug in date time handling (thanks to code provided by Mike
   Hutchinson).

05/06/2004 - Brian Heineman
 o Corrected bug [946642] No support for 1.4 java.sql.Types.BOOLEAN.

05/03/2004 - Brian Heineman
 o Corrected TdsSocket to compile under 1.3.
 o Added initial (limited) ParameterMetaData support.
 o Updated DatabaseMetaData.supportsStatementPooling() to return true.

05/02/2004 - Brian Heineman
 o Updated SQLException handling to set the initCause() method with the
   initiating exception if the JVM supports it (1.4+).  Otherwise, the
   inital cause of the exception is ignored (JVM's prior to 1.4).

05/01/2004 - Brian Heineman
 o Consolidated logic for returning data from result sets and callable
   statements.
 o Added support for additional data conversions.
 o Implemented CallableStatement.getBlob(int)
 o Implemented CallableStatement.getClob(int)
 o Implemented CallableStatement.getBigDecimal(int)
 o Implemented CallableStatement.getBigDecimal(int,int)